--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <header>
-        <input type="text" id="carta-texto">
+        <input type="text" id="carta-texto"> <!-- 1 -->
     </header>
     <section>
-        
+        <p id="carta-gerada"></p>
+
     </section>
     
     <script src="script.js"></script>
