--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <header>
         <input type="text" id="carta-texto"> <!-- 1 -->
+        <button id="criar-carta">Criar carta</button>
     </header>
-    <section>
-        <p id="carta-gerada"></p>
 
+    <section>
+        <p id="carta-gerada"> <!-- 2 -->
+            
+        </p>
     </section>
     
     <script src="script.js"></script>
