Requisito [18] Falta CSS

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             
         </p>
     </section>
+
+    <section>
+        <p id="carta-contador">
+
+        </p>
+    </section>
     
     <script src="script.js"></script>
 </body>
