--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <input type="text" id="carta-texto">
+  <button type="submit"></button>
+  <p id="carta-gerada"></p>
 
   <script src="/script.js"></script>
 </body>
