--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <input type="text" id="carta-texto">
-  <button type="submit"></button>
+  <button type="submit" id="criar-carta">Criar Carta</button>
   <p id="carta-gerada"></p>
 
   <script src="/script.js"></script>
