--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <main id="container">
     <header id="header">
     </header>
+    <section id="content"></section>
   </main>
   <script src="script.js"></script>
 </body>
