--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <input type='text' id='carta-texto'>
-  <button id='criar-carta'>Criar carta</button>
+  <button type='submit' id='criar-carta'>Criar carta</button>
   <p id='carta-gerada'></p>
+  <p id='carta-contador'></p>
   <script src='script.js'></script>
 </body>
 </html>
