--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <header></header>
   <main>
     <input id="carta-texto">
+    <p id="carta-gerada"></p>
+    <button id="criar-carta">Crie a minha carta!</button>
   </main>
   <footer></footer>
   <script type="text/javascript" src="script.js"></script>  
