--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <input id="carta-texto">
     <p id="carta-gerada"></p>
     <button id="criar-carta">Crie a minha carta!</button>
+    <p id="carta-contador"></p>
   </main>
   <footer></footer>
   <script type="text/javascript" src="script.js"></script>  
