--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </header>
         <section>
             <input type="text" id="carta-texto">
+            <p id="carta-gerada"></p>
         </section>
     </div>
     <script src="script.js"></script>
