--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section>
             <input type="text" id="carta-texto">
             <p id="carta-gerada"></p>
+            <button id="criar-carta">Gerar Carta</button>
         </section>
     </div>
     <script src="script.js"></script>
