--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav></nav>
     <main></main>
     <section>
-        <input type="text" id="carta-texto">
+        <input type="text" id="carta-texto" value="">
         <button id="criar-carta">Criar</button>
     </section>
     <section>
