--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section>
         <p id="carta-gerada"></p>
     </section>
+    <section><p id="carta-contador">0</p></section>
 </body>
 <script src="script.js"></script>
 
