comitão bomba, nem sei o que mudei, de tanto que mudei.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
   <input id="carta-texto" type="text" placeholder="Digite sua mensagem aqui"> 
   
   <button id="criar-carta">Gerar carta</button>
-  
+  <br><br>
   <p id="carta-gerada">
     A CARTA:
   </p>
-  
-  <p id="carta-contador">
-    <h2> -- Contador de palavras -- </h2>
+  <br><br>
+  <h2> -- Contador de palavras -- </h2>
     O número de palavras digitado foi:
-    <h3 id="word-number"></h3>
-  </p>
+  <h3 id="word-number"><p id="carta-contador"></p></h3>
 
   <script src="script.js"></script>
 
