--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <title>Mistery Letter</title>
 </head>
 <body>
-  <input id = "carta-texto" type="text" placeholder="Escreve sua carta"> <button>Gerar carta!</button>
+  <input id = "carta-texto" type="text" placeholder="Escreve sua carta"> <button id = 'criar-carta'>Gerar carta!</button>
+  <section>
+    <p id = 'carta-gerada'></p>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
