--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   <input type="text" id="carta-texto">
   <button id="criar-carta">Criar carta</button>
-
+  <div>
+    Quantidade de palavras: <p style="display: inline-block;" id="carta-contador">0</p>
+  </div>
   <p id="carta-gerada"></p>
   
 </body>
