Project Mistery Letter - requisito 18

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <p> Insira o texto que você deseja transformar em uma carta misteriosa:</p>
         <input type='text' id="carta-texto">
         <button id="criar-carta">Gerar carta!!</button>
+        <p> O número de palavras é:</p>
+        <p id="carta-contador"></p>
     </section>
     <section>
         <p id="carta-gerada">
