--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <input id="carta-texto" type="text">
+        <p id="carta-gerada"></p>
         <script src="script.js"></script>
     </body>
 </html>
