--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h1>Mistery Letter</h1>
   <input id="carta-texto" type="text" name="letter-text">
   <p id="carta-gerada"></p>
+  <p id="carta-contador"></p>
   <button id="criar-carta">Gerar Carta</button>
   <script src="script.js"></script>
 </body>
