--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <input id="carta-texto">
       <button type="button" id="criar-carta">Criar Carta</button>
     </section>
-    <section>
+    <section id="carta">
       <p id="carta-gerada"></p>
+      <p id="contador"></p>
     </section>
   </main>
   <script src="script.js"></script>
