Corrigi id contador e carregamento da classe magazine2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
     <section id="carta">
       <p id="carta-gerada"></p>
-      <p id="contador"></p>
+      <p id="carta-contador"></p>
     </section>
   </main>
   <script src="script.js"></script>
