--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
   <title>Mistery Letter</title>
 </head>
 <body>
-  <input id="carta-texto">
+  <input type="text" id="carta-texto">
+  <button id="criar-carta"></button>
+  <p id="carta-contador">0</p>
+  <p id="carta-gerada">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </p>
   <script href="script.js"></script>
 </body>
 </html>
